--- a/package.json
+++ b/package.json
@@ -14,8 +14,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "element-ui": "^2.6.1",
+    "sass": "^1.17.2",
+    "sass-loader": "^7.1.0",
+    "save": "^2.3.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
